--- a/src/app/edit-record/edit-record.component.html
+++ b/src/app/edit-record/edit-record.component.html
@@ -18,7 +18,7 @@
     </mat-form-field>
     <br>
     <mat-form-field>
-        <input matInput [ngxMatDatetimePicker]="picker" placeholder="Choose a date & time" formControlName="date">
+        <input matInput [ngxMatDatetimePicker]="picker" placeholder="Fill time" formControlName="date">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <ngx-mat-datetime-picker #picker [startAt]="date"></ngx-mat-datetime-picker>
     </mat-form-field>
